Add in port 443

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -16,6 +16,10 @@ frontend main-ip
         bind 0.0.0.0:80 
 	http-request use-service lua.acme if { path_beg /.well-known/acme-challenge/ }
 
+frontend main-ip
+        bind :::443 ssl crt /etc/haproxy/ssl
+	http-request use-service lua.acme if { path_beg /.well-known/acme-challenge/ }
+
 listen acme
     bind 127.0.0.1:9011
     http-request use-service lua.acme
