--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -16,7 +16,7 @@ frontend main-ip
         bind 0.0.0.0:80 
 	http-request use-service lua.acme if { path_beg /.well-known/acme-challenge/ }
 
-frontend main-ip
+frontend main-ip-ssl
         bind :::443 ssl crt /etc/haproxy/ssl
 	http-request use-service lua.acme if { path_beg /.well-known/acme-challenge/ }
 
